Trying to fix text alignment

--- a/zev/assets/scss/_content.scss
+++ b/zev/assets/scss/_content.scss
@@ -41,7 +41,7 @@
 
     p {
       text-align: justify;
-      text-justify: distribute;
+      text-justify: auto;
       text-align-last: left;
       hyphens: auto;
     }
